--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="card">
+        <div class="search">
+            <input type="text" class="search-box" placeholder="Enter city name">
+            <button><img src="./assets/img/search.png" alt="search icon"></button>
+        </div>
+        <div class="weather">
+            <img src="./assets/img/rain.png" alt="" class="weather-icon">
+            <h1 class="temp">30°C</h1>
+            <h2 class="city">New York</h2>
+
+            <div class="details">
+                <div class="col">
+                    <img src="./assets/img/humidity.png" alt="">
+                    <div>
+                        <p class="humidity"> 50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="./assets/img/wind.png" alt="">
+                    <div>
+                        <p class="wind"> 30 km/h </p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
